[package]
name = "brc"
version = "0.1.0"
edition = "2024"

[dependencies]
memmap2 = "0.9.10"

[profile.release]
codegen-units = 1       # number of threads on compilation. 1 allows for maximum optimization
incremental = false     # prevents information to be saved locally to improve recomp times
lto = true              # Causes extended linking time at the expense of compile time
opt-level = 3           # experiment with 2 or 3 (2 or 3 for file size optimization)
debug = true
strip = "debuginfo"     # removes all debug info from binary (maybe should do "true" instead)